--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
     "author": "jeffrey humbe",
     "private": true,
     "license": "MIT",
+   
+  
     "scripts": {
-        "dev": "nodemon server.js",
-        "start": "node server.js",
+        "dev:build-server": "NODE_ENV = development webpack --config webpack.server.js --mode = development -w",
+        "dev:start": "nodemon ./server-build/server.js",
+        "dev": "npm-run-all --parallel build dev:*",
+        "build": "babel ./server -d dist-server",
+        "start": " node server.js",
         "heroku-postbuild": "cd client && yarn && yarn run build"
     },
     "dependencies": {
+        "babel-loader": "^8.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "connect-flash": "^0.1.1",
@@ -25,16 +31,30 @@
         "mongoose": "*",
         "morgan": "^1.10.0",
         "multer": "*",
+        "nodemailer": "^6.4.15",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "*",
         "paypal-rest-sdk": "^1.8.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "react-meta-tags": "^0.7.4",
         "swagger-jsdoc": "^4.2.3",
         "swagger-ui-express": "^4.1.4",
         "uuid": "^8.3.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.5"
+        "@babel/cli": "^7.12.1",
+        "@babel/core": "^7.12.3",
+        "@babel/node": "^7.12.6",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/preset-env": "^7.12.1",
+        "@babel/preset-react": "^7.12.5",
+        "nodemon": "^2.0.5",
+        "npm-run-all": "^4.1.5",
+        "webpack": "^5.4.0",
+        "webpack-cli": "^4.2.0",
+        "webpack-node-externals": "^2.5.2"
     },
     "engines": {
         "node": "12.15.0"
