--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "flickity": "^2.2.1",
     "react": "^16.13.1",
     "react-async-script-loader": "^0.3.0",
@@ -45,6 +46,5 @@
       "last 1 safari version"
     ]
   },
-
   "proxy": "http://localhost:4000"
 }
