--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
     "author": "jeffrey humbe",
     "private": true,
     "license": "MIT",
-   
-  
     "scripts": {
         "dev:build-server": "NODE_ENV = development webpack --config webpack.server.js --mode = development -w",
         "dev:start": "nodemon ./server-build/server.js",
         "dev": "npm-run-all --parallel build dev:*",
         "build": "babel ./server -d dist-server",
-        "start": " npm run clusters",
-        "clusters":"node serverCluster.js",
+        "start": " yarn run clusters",
+        "clusters": "node serverCluster.js",
         "heroku-postbuild": "cd client && yarn && yarn run build"
     },
     "dependencies": {
         "babel-loader": "^8.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "compression": "^1.7.4",
         "connect-flash": "^0.1.1",
         "cookie-parser": "*",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "ejs": "^3.1.3",
         "express": "^4.17.1",
         "express-messages": "*",
