--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
         "babel-loader": "^8.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "cloudinary": "^1.25.1",
         "compression": "^1.7.4",
         "connect-flash": "^0.1.1",
         "cookie-parser": "*",
         "cors": "^2.8.5",
+        "datauri": "^3.0.0",
         "dotenv": "^8.2.0",
         "ejs": "^3.1.3",
         "express": "^4.17.1",
@@ -53,7 +55,6 @@
         "@babel/preset-react": "^7.12.5",
         "nodemon": "^2.0.5",
         "npm-run-all": "^4.1.5",
-        "webpack": "^5.4.0",
         "webpack-cli": "^4.2.0",
         "webpack-node-externals": "^2.5.2"
     },
