--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
     "private": true,
     "license": "MIT",
     "scripts": {
-        "dev:build-server": "NODE_ENV = development webpack --config webpack.server.js --mode = development -w",
-        "dev:start": "nodemon ./server-build/server.js",
-        "dev": "npm-run-all --parallel build dev:*",
-        "build": "babel ./server -d dist-server",
+        "dev:start": "nodemon server.js",
         "start": "yarn run clusters",
         "clusters": "node serverCluster.js",
         "heroku-postbuild": "cd client && yarn && yarn run build",
