--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jeff-app",
-  "homepage": "https://localhost:4000/",
+  "homepage": "http://localhost:4000/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
