--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "start-client": "cd client && yarn run start"
     },
     "dependencies": {
-        "babel-loader": "^8.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cloudinary": "^1.25.1",
@@ -36,6 +35,7 @@
         "morgan": "^1.10.0",
         "multer": "*",
         "nodemailer": "^6.4.15",
+        "openapi-types": "^8.0.0",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "passport-local": "*",
@@ -44,8 +44,7 @@
         "react-dom": "^16.14.0",
         "react-meta-tags": "^0.7.4",
         "swagger-jsdoc": "^4.2.3",
-        "swagger-ui-express": "^4.1.4",
-        "uuid": "^8.3.0"
+        "swagger-ui-express": "^4.1.4"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.1",
@@ -56,7 +55,6 @@
         "@babel/preset-react": "^7.12.5",
         "nodemon": "^2.0.5",
         "npm-run-all": "^4.1.5",
-        "webpack-cli": "^4.2.0",
         "webpack-node-externals": "^2.5.2"
     },
     "engines": {
